--- a/IngresoPersonas/IngresoPersonas/Recibido.xaml
+++ b/IngresoPersonas/IngresoPersonas/Recibido.xaml
@@ -1,30 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="IngresoPersonas.Recibido">
+             x:Class="IngresoPersonas.Recibido"
+             BackgroundImageSource="fon.jpg">
     <ContentPage.Content>
         <StackLayout>
-            <Frame BackgroundColor="lightBlue" Opacity="0.7" Padding="15" CornerRadius="0">
-                <Label Text="{Binding nombre}" TextColor="Black" FontSize="Large"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" x:Name="lbnombre"/>
-           </Frame>
 
-            <Frame BackgroundColor="lightBlue" Opacity="0.7" Padding="15" CornerRadius="0">
-                <Label Text="{Binding apellido}" TextColor="Black" FontSize="Large"
+            <Label  BackgroundColor="LightYellow" HorizontalTextAlignment="Center" TextColor="DarkOliveGreen" Text="NOMBRE: " FontSize="Medium" Padding="30,5,30,5"/>
+            <Frame BackgroundColor="lightBlue"  Padding="10" CornerRadius="0">
+                <Label Text="{Binding nombre}" TextColor="Black" FontSize="Medium"
+                VerticalOptions="CenterAndExpand"
+                HorizontalOptions="CenterAndExpand" x:Name="lbnombre"/>
+                </Frame>
+
+            <Label  BackgroundColor="LightYellow" HorizontalTextAlignment="Center" TextColor="DarkOliveGreen" Text="APELLIDOS:" FontSize="Medium" Padding="30,5,30,5"/>
+            <Frame BackgroundColor="lightBlue"  Padding="10" CornerRadius="0">
+                <Label Text="{Binding apellido}" TextColor="Black" FontSize="Medium"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" x:Name="lbapellido"/>
             </Frame>
 
-            <Frame BackgroundColor="lightBlue" Opacity="0.7" Padding="15" CornerRadius="0">
-                <Label Text="{Binding edad}" TextColor="Black" FontSize="Large"
+            <Label  BackgroundColor="LightYellow" HorizontalTextAlignment="Center" TextColor="DarkOliveGreen" Text="EDAD:" FontSize="Medium" Padding="30,5,30,5"/>
+            <Frame BackgroundColor="lightBlue"  Padding="10" CornerRadius="0">
+                <Label Text="{Binding edad}" TextColor="Black" FontSize="Medium"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" x:Name="lbedad"/>
             </Frame>
 
-
-            <Frame BackgroundColor="lightBlue" Opacity="0.9" Padding="15" CornerRadius="0">
-            <Label Text="{Binding correo}" TextColor="Black" FontSize="Large"
+            <Label  BackgroundColor="LightYellow" HorizontalTextAlignment="Center" TextColor="DarkOliveGreen" Text="CORREO ELECTRONICO:" FontSize="Medium" Padding="30,5,30,5"/>
+            <Frame BackgroundColor="lightBlue"  Padding="15" CornerRadius="0">
+                <Label Text="{Binding correo}" TextColor="Black" FontSize="Medium"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" x:Name="lbcorreo"/>
             </Frame>
